2nd part + 3rd part ready

--- a/index.html
+++ b/index.html
@@ -30,19 +30,29 @@
         <img src="images.jpeg" alt="" class="img1">
     </div>
     <div class="two">
-        <div>Text</div>
-        <div><img src="" alt=""></div>
-        <div>Texttt</div>
-        <div><img src="" alt=""></div>
-        <div>Texttt</div>
-        <div><img src="" alt=""></div>
-        <div>Texttt</div>
-        <div><img src="" alt=""></div>
-        <div>Texttt</div>
+        <div class="text3">Some Random Information!</div>
+        <div class="box">
+            <div class="boxbox">
+                <div><img src="images.jpeg" alt=""></div>
+                <div>This is some subtext under the img.</div>
+            </div>
+            <div class="boxbox">
+                <div><img src="images.jpeg" alt=""></div>
+                <div>This is some subtext under the img.</div>
+            </div>
+            <div class="boxbox">
+                <div><img src="images.jpeg" alt=""></div>
+                <div>This is some subtext under the img.</div>
+            </div>
+            <div class="boxbox">
+                <div><img src="images.jpeg" alt=""></div>
+                <div>This is some subtext under the img.</div>
+            </div>
+        </div>
     </div>
     <div class="three">
-        <div>Some insp text</div>
-        <div>from</div>
+        <div class="text4">“THIS DRINK, I LIKE IT! ANOTHER!”</div>
+        <div class="right"> - Thor, God of Thunder</div>
     </div>
     <div class="four">
         <div>sign up</div>
