--- a/index.html
+++ b/index.html
@@ -25,40 +25,44 @@
             <div class="text">This Website is Awesome</div>
             <div class="text2"> This Website has some subtext that goes here under the main title. Its smaller font and
                 the color is lower contrast.</div>
-            <span><button>Button</button></span>
+            <span><button class="btn1">Button</button></span>
         </div>
-        <img src="images.jpeg" alt="" class="img1">
+        <img src="images.png" alt="" class="img1">
     </div>
     <div class="two">
         <div class="text3">Some Random Information!</div>
         <div class="box">
             <div class="boxbox">
-                <div><img src="images.jpeg" alt=""></div>
+                <div><img src="images.png" alt=""></div>
                 <div>This is some subtext under the img.</div>
             </div>
             <div class="boxbox">
-                <div><img src="images.jpeg" alt=""></div>
+                <div><img src="images.png" alt=""></div>
                 <div>This is some subtext under the img.</div>
             </div>
             <div class="boxbox">
-                <div><img src="images.jpeg" alt=""></div>
+                <div><img src="images.png" alt=""></div>
                 <div>This is some subtext under the img.</div>
             </div>
             <div class="boxbox">
-                <div><img src="images.jpeg" alt=""></div>
+                <div><img src="images.png" alt=""></div>
                 <div>This is some subtext under the img.</div>
             </div>
         </div>
     </div>
     <div class="three">
         <div class="text4">“THIS DRINK, I LIKE IT! ANOTHER!”</div>
-        <div class="right"> - Thor, God of Thunder</div>
+        <div class="right">- Thor, God of Thunder</div>
     </div>
     <div class="four">
-        <div>sign up</div>
+        <div class="separate2">
+            <div class="text5">Call to action! Its time!</div>
+            <div class="text6"> Sign up for our product by clicking that button over there!</div>
+        </div>
+        <button class="btn2">Button</button>
     </div>
     <div class="footer">
-        <div>Copyright @ The Odin Project 2022</div>
+        <div>Copyright &copy; The Odin Project 2022</div>
     </div>
 </body>
 
